frontend-sigescom/frontend-sigescom.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-sigescom
  labels:
    app: frontend-sigescom
spec:
  selector:
    matchLabels:
      app: frontend-sigescom 
  replicas: 2
  template:
    metadata:
      labels:
        app: "frontend-sigescom"
    spec:
      containers:
        - name: frontend-sigescom-container
          image: agrownegocios/frontend-sigescom:v235
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: regcred

# https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
#kubectl create secret docker-registry regcred --docker-server=<your-registry-server> --docker-username=<your-name> --docker-password=<your-pword> --docker-email=<your-email>
# <your-registry-server>. Use https://index.docker.io/v1/para DockerHub.
# <your-name> é o seu nome de usuário do Docker.
# <your-pword> é sua senha do Docker.
# <your-email> é o seu e-mail do Docker.
