frontend-sigescom/svc-frontend-sigescom.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-frontend
spec:
  type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: frontend-sigescom
